# scroll-bye-bye

./: .gitignore  Cargo.toml
data/: config.toml
src/: claimer.rs  config.rs  constants.rs  logger.rs  main.rs  proof.rs  utils.rs
