[package]
name = "scroll-claimer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
alloy-chains = "0.1.40"
captcha_oxide = "6.0.0"
eyre = "0.6.12"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
